[gd_scene load_steps=7 format=3 uid="uid://v6y8neowesqq"]

[ext_resource type="Script" uid="uid://eih0riprltgc" path="res://src/geyser.gd" id="1_u1it6"]
[ext_resource type="PackedScene" uid="uid://xu6rwxfu5x51" path="res://assets/geysir.glb" id="2_1spoe"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jukhd"]
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 0, -1)
spread = 3.293
initial_velocity_max = 255.89
gravity = Vector3(0, 0, 0)
linear_accel_min = 1.77
linear_accel_max = 32.36

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1spoe"]
transparency = 1
specular_mode = 1
albedo_color = Color(0.333333, 0.65098, 1, 0.901961)
metallic = 0.79
roughness = 0.19

[sub_resource type="SphereMesh" id="SphereMesh_1md36"]
material = SubResource("StandardMaterial3D_1spoe")
radius = 0.3
height = 0.6
radial_segments = 8
rings = 8

[sub_resource type="BoxShape3D" id="BoxShape3D_1spoe"]
size = Vector3(3.87695, 1.62659, 13.1284)

[node name="Geyser" type="Node3D"]
script = ExtResource("1_u1it6")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(0.373053, 0, 0, 0, 0.373053, 0, 0, 0, 0.373053, 0, -0.0679511, -0.871403)
amount = 16
lifetime = 0.14
process_material = SubResource("ParticleProcessMaterial_jukhd")
draw_pass_1 = SubResource("SphereMesh_1md36")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="geysir" parent="Node3D" instance=ExtResource("2_1spoe")]
transform = Transform3D(-2.98023e-08, -4.37114e-08, 1, 4.37114e-08, 1, 4.37114e-08, -1, 4.37114e-08, -2.98023e-08, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0136032, 0.44264, -6.53291)
shape = SubResource("BoxShape3D_1spoe")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
